Use text blocks for multi-line config comments